[package]
name = "sunflower_picking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
web-sys = {version = "0.3", features = ['CssStyleDeclaration', 'HtmlElement', 'Document']}

[profile.release]
opt-level = 'z'
lto = "thin"


